updated site with power animals, post method

--- a/templates/compliment.html
+++ b/templates/compliment.html
@@ -4,7 +4,9 @@
   <title>A Compliment</title>
 </head>
 <body>
-    Hi {{ person }}! I think you're {{ compliment }}!
+    <h3>Hi {{ person }}! I think you're SOOOOOOO {{ compliment }}!</h3>
+    <br>
+    <img src="{{ animal_src }}" height=300px /> 
     
     <form action="/game">    
         <label> Would you like to play a game?
