--- a/templates/game.html
+++ b/templates/game.html
@@ -33,5 +33,12 @@
         </label>
         <input type="submit">
     </form>
+<!--     <form action="/animal" method="post">
+        <br>
+        <label>Input an animal:
+            <input type="text" name="animal">
+        </label>
+        <input type="submit">
+    </form> --> 
 </body>
 </html>
