--- a/templates/hello.html
+++ b/templates/hello.html
@@ -6,7 +6,17 @@
 <body>
     <h1>Hi There!</h1>
     <form action="/greet">
+        <br>
         <label>What's your name? <input type="text" name="person"></label>
+        <label>Choose your power animal:
+            <br>
+            <select name="animal">
+                <option value="balloonicorn">Balloonicorn</option>
+                <option value="pegasus">Pegasus</option>
+                <option value="hippogriff">Hippogriff</option>
+                <option value="kirby">Kirby</option>
+            </select>
+        </label>              
         <input type="submit">
     </form>
 </body>
